# socai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  pyproject.toml
.github/workflows/: release.yml
app/: .gitignore  index.html  package.json  pnpm-lock.yaml
app/src/: capability_tests.ts  main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  tasks.rs  timeline.rs
app/src/lib/: html.ts
app/src/panels/: task_history.ts  task_new.ts  tasks.ts
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  tui.rs
apps/tui/: Cargo.toml
apps/tui/src/: main.rs
cli/src/: daemon.rs  tui.rs
core/: Cargo.toml  __init__.py
core/agent/: backends.py  loop.py  run_state.py  tool.py
core/src/agent/: api_errors.rs  compaction.rs  file_bash_tools.rs  loop.rs  memory.rs  mod.rs  provider.rs  report.rs  run_logging.rs  run_state.rs  session.rs  system_prompt.rs
core/src/cdp/: pages.rs  session.rs
core/src/runtime/: engine.rs
crates/agent/src/: lib.rs  loop.rs  memory.rs  report.rs  run_state.rs  tool.rs
crates/browser/: Cargo.toml
crates/browser/examples/: connect_and_eval.rs  eval_xhs_extractor.rs
crates/browser/src/: lib.rs  (+4 more)
crates/runtime/: Cargo.toml
docs/: browser-automation-evolution.md
parity/: AGENTS.md  README.md
scripts/: run_parity.sh  run_xhs_extractor.py
socai/agent/: backends.py  loop.py
socai/cli/: runner.py
socai/media/: __init__.py  audio.py  common.py  image.py  processor.py  video.py
tests/: test_agent_core.py
(+17 files in other folders)
