[package]
name = "socai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "socai"
path = "src/main.rs"

[dependencies]
socai-core.workspace = true
socai-sites.workspace = true
socai-runtime.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true }

[lints]
workspace = true
